plugins {
	id 'org.springframework.boot' version "2.7.0"
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'vn.hust'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter:2.7.18'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.18'
	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.18'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.18'
//	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.7.18'
	implementation 'mysql:mysql-connector-java:8.0.29'
	implementation 'javax.persistence:javax.persistence-api:2.2'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation 'org.jetbrains:annotations:24.0.0'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.3'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
    implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-common', version: '1.6.11'
	implementation 'org.json:json:20231013'
	implementation 'org.reflections:reflections:0.10.2'

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.18'

}

tasks.named('test') {
	useJUnitPlatform()
}
